# isacc-ml

./: Dockerfile  README.md  config.py  docker-compose.yaml  ml_services.env.default  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-deliver.yaml  test.yaml
ml_services/: app.py  config.py  wsgi.py
ml_services/api/: ml_utils.py  views.py
tests/: conftest.py  test_app.py
