[project]
name = "isacc-ml"
description = "Flask-based microservice for machine learning utilities in the ISACC service"
version = "0.1.0"
authors = [
    { name="CIRG", email="cirg-adm@uw.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/uwcirg/isacc-ml"
Repository = "https://github.com/uwcirg/isacc-ml.git"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["isacc_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.2"
gunicorn = "20.1.0"
requests-cache = "0.6.4"
torch = "1.13.0"
transformers = "4.24.0"
scipy = "1.7.3"
numpy = "1.21.5"
pandas = "1.3.5"
click = "8.0.1"
importlib-metadata = "4.8.1"
itsdangerous = "2.0.1"
jinja2 = "3.0.1"
markupsafe = "2.0.1"
six = "1.16.0"
typing-extensions = "3.10.0.2"
werkzeug = "2.0.1"
zipp = "3.5.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-mock = "3.6.1"
pytest-datadir = "1.3.1"
requests-mock = "1.9.3"
attrs = "21.2.0"
iniconfig = "1.1.1"
packaging = "21.0"
pluggy = "1.0.0"
psutil = "5.8.0"
py = "1.10.0"
pyparsing = "2.4.7"
toml = "0.10.2"