[metadata]
name = isacc-ml
description = Flask-based microservice for NLP machine learning utilities in the ISACC service
author = CIRG
author_email = cirg-adm@uw.edu
url = https://github.com/uwcirg/isacc-ml
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = ml_services
python_requires = >=3.7
install_requires =
    flask==1.1.2
    gunicorn==20.1.0
    requests-cache==0.6.4
    numpy==1.21.5
    pandas==1.3.5
    scipy==1.7.3
    torch==1.13.0
    transformers==4.24.0

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-mock==3.6.1
    pytest-datadir==1.3.1
    requests-mock==1.9.3


[flake8]
max-line-length=100

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*
