[metadata]
name = isacc-ml
description = Flask-based microservice for NLP machine learning utilities in the ISACC service
author = CIRG
author_email = cirg-adm@uw.edu
url = https://github.com/uwcirg/isacc-ml

[options]
packages = ml_services
python_requires = >=3.7
install_requires =
    flask
    gunicorn
    requests-cache
    numpy
    pandas
    scipy
    torch
    transformers

[options.extras_require]
dev =
    pytest
    pytest-mock
    pytest-datadir
    requests-mock

[flake8]
max-line-length=100

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*
