[metadata]
name = isacc-ml
description = Flask-based microservice for NLP machine learning utilities in the ISACC service
author = CIRG
author_email = cirg-adm@uw.edu
url = https://github.com/uwcirg/isacc-ml

[options]
packages = ml_services
python_requires = >=3.9

# Pinned transformers because of compatability issues 
# Pinned tokenizers to comply with transformers
# https://github.com/huggingface/transformers/issues/30965
install_requires =
    transformers==4.37.0
    tokenizers==0.15.2
    flask
    gunicorn
    requests-cache
    numpy
    pandas
    scipy
    torch

[options.extras_require]
dev =
    pytest
    pytest-mock
    pytest-datadir
    requests-mock

[flake8]
max-line-length=100

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # Ignore testing-specific warning
    ignore:^"localhost" is not a valid cookie domain, it must contain a.*:Warning

    # Ignore warnings on specific dependencies (already reported upstream)
    ignore::DeprecationWarning:dogpile
    ignore::DeprecationWarning:flask_user

    # error on bad assertions
    error:.*assertion is always true.*